--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=8.4",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "chillerlan/php-qrcode": "^5.0"
   },
   "autoload": {
     "psr-4": {
