--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   "require": {
     "php": ">=8.4",
     "ext-mbstring": "*",
-    "chillerlan/php-qrcode": "^5.0"
+    "chillerlan/php-qrcode": "^5.0",
+    "bacon/bacon-qr-code": "^3.0"
   },
   "autoload": {
     "psr-4": {
