--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=8.4",
+    "ext-gd": "*",
     "ext-mbstring": "*",
-    "chillerlan/php-qrcode": "^5.0",
-    "bacon/bacon-qr-code": "^3.0"
+    "chillerlan/php-qrcode": "^5.0"
   },
   "autoload": {
     "psr-4": {
